tests/baselines/reference/numericIndexerConstrainsPropertyDeclarations2.errors.txt
numericIndexerConstrainsPropertyDeclarations2.ts(16,5): error TS2411: Property '3.0' of type 'number' is not assignable to 'number' index type 'A'.
numericIndexerConstrainsPropertyDeclarations2.ts(25,5): error TS2411: Property '3.0' of type 'number' is not assignable to 'number' index type 'A'.
numericIndexerConstrainsPropertyDeclarations2.ts(34,5): error TS2411: Property '3.0' of type 'number' is not assignable to 'number' index type 'A'.
numericIndexerConstrainsPropertyDeclarations2.ts(44,5): error TS2353: Object literal may only specify known properties, and '"4.0"' does not exist in type '{ [x: number]: A; }'.


==== numericIndexerConstrainsPropertyDeclarations2.ts (4 errors) ====
    // String indexer providing a constraint of a user defined type
    
    class A {
        foo(): string { return ''; }
    }
    
    class B extends A {
        bar(): string { return ''; }
    }
    
    class Foo {
        [x: number]: A;
        1.0: A; // ok
        2.0: B; // ok
        "2.5": B // ok
        3.0: number; // error
        ~~~
!!! error TS2411: Property '3.0' of type 'number' is not assignable to 'number' index type 'A'.
        "4.0": string; // error
    }
    
    interface Foo2 {
        [x: number]: A;
        1.0: A; // ok
        2.0: B; // ok
        "2.5": B // ok
        3.0: number; // error
        ~~~
!!! error TS2411: Property '3.0' of type 'number' is not assignable to 'number' index type 'A'.
        "4.0": string; // error
    }
    
    var a: {
        [x: number]: A;
        1.0: A; // ok
        2.0: B; // ok
        "2.5": B // ok
        3.0: number; // error
        ~~~
!!! error TS2411: Property '3.0' of type 'number' is not assignable to 'number' index type 'A'.
        "4.0": string; // error
    };
    
    // error
    var b: { [x: number]: A } = {
        1.0: new A(), 
        2.0: new B(), 
        "2.5": new B(),
        3.0: 1,
        "4.0": ''
        ~~~~~
!!! error TS2353: Object literal may only specify known properties, and '"4.0"' does not exist in type '{ [x: number]: A; }'.
    }